# smblevelworkshop2

./: .appveyor.yml  .bintray-descriptor.json  .dockerignore  .gitignore  .nvimrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  go.sh  vcpkg.json
ws2common/: CMakeLists.txt  README.md
ws2common/include/: EnumGameVersion.hpp  EnumPlaybackState.hpp  MessageHandler.hpp
ws2common/include/scene/: BananaSceneNode.hpp  BumperSceneNode.hpp  FalloutVolumeSceneNode.hpp  GoalSceneNode.hpp  JamabarSceneNode.hpp  MeshSceneNode.hpp  SceneNode.hpp  SwitchSceneNode.hpp  WormholeSceneNode.hpp
ws2common/include/ws2common/: AABB.hpp  CollisionGrid.hpp  EnumAnimationSeesawType.hpp  EnumBananaType.hpp  EnumFogType.hpp  EnumGameVersion.hpp  EnumGoalType.hpp  EnumPlaybackState.hpp  EnumStageType.hpp  EnumStatus.hpp  Fog.hpp  MathUtils.hpp  MessageHandler.hpp  Result.hpp  Result.ipp  SerializeUtils.hpp  Stage.hpp  Transform.hpp  WS2Common.hpp  WS2Common.ipp
ws2common/include/ws2common/animation/: EffectAnimation.hpp  EnumEasing.hpp  EnumLoopType.hpp  FogAnimation.hpp  Keyframe.hpp  Keyframe.ipp  KeyframeEffect1.hpp  KeyframeEffect2.hpp  RaceTrackPath.hpp  TransformAnimation.hpp
ws2common/include/ws2common/config/: StagedefConfigParser.hpp  XMLConfigParser.hpp
ws2common/include/ws2common/exception/: Exception.hpp  IOException.hpp  ModelLoadingException.hpp  RuntimeException.hpp
ws2common/include/ws2common/model/: MeshSegment.hpp  ModelLoader.hpp  ModelLoader.ipp  Vertex.hpp
ws2common/include/ws2common/profile/: ProfileSegment.hpp  Profiler.hpp
ws2common/include/ws2common/resource/: AbstractResource.hpp  ResourceMesh.hpp  ResourceTexture.hpp
ws2common/include/ws2common/scene/: BackgroundGroupSceneNode.hpp  BananaSceneNode.hpp  BoosterSceneNode.hpp  BumperSceneNode.hpp  CollisionSceneNode.hpp  ConeCollisionObjectSceneNode.hpp  CylinderCollisionObjectSceneNode.hpp  FalloutVolumeSceneNode.hpp  ForegroundGroupSceneNode.hpp  GoalSceneNode.hpp  GolfHoleSceneNode.hpp  (+10 more)
ws2common/resources/Raw/: uvtemplate.xcf
ws2common/resources/raw/: README.md
ws2common/resources/ws2common/: WS2CommonResources.qrc  resources.qrc
ws2common/src/: MessageHandler.cpp
ws2common/src/scene/: BananaSceneNode.cpp  BumperSceneNode.cpp  FalloutVolumeSceneNode.cpp  GoalSceneNode.cpp  JamabarSceneNode.cpp  MeshSceneNode.cpp  SceneNode.cpp  SwitchSceneNode.cpp  WormholeSceneNode.cpp
ws2common/src/ws2common/: CollisionGrid.cpp  EnumAnimationSeesawType.cpp  EnumBananaType.cpp  EnumFogType.cpp  EnumGoalType.cpp  EnumPlaybackState.cpp  EnumStageType.cpp  Fog.cpp  MathUtils.cpp  MessageHandler.cpp  SerializeUtils.cpp  Stage.cpp  Transform.cpp  WS2Common.cpp
ws2editor/: CMakeLists.txt
ws2editor/include/: Config.hpp  GLManager.hpp  MathUtils.hpp  PhysicsDebugDrawer.hpp  Progress.hpp  WS2.hpp
ws2editor/include/exception/: Exception.hpp  IOException.hpp  ModelLoadingException.hpp  RuntimeException.hpp
ws2editor/include/model/: MeshSegment.hpp  Vertex.hpp
ws2editor/include/project/: Project.hpp  ProjectManager.hpp
ws2editor/include/resource/: AbstractResource.hpp  ResourceManager.hpp  ResourceManager.ipp  ResourceMesh.hpp  ResourceScene.hpp  ResourceTexture.hpp
ws2editor/include/scene/: EditorMeshSceneNode.hpp  MeshSceneNode.hpp  SceneSelectionManager.hpp
ws2editor/include/task/: ImportFileTask.hpp  Task.hpp  TaskManager.hpp
ws2editor/include/ui/: AboutWindow.hpp  ModelManager.hpp  ModelOutliner.hpp  ModelResources.hpp  SettingsDialog.hpp  StageEditorWindow.hpp
ws2editor/include/widget/: OutlinerWidget.hpp  ViewportWidget.hpp
ws2editor/include/ws2editor/: CachedGlMesh.hpp  CachedGlTexture.hpp  Config.hpp  EnumCameraNav.hpp  GLManager.hpp  IExportProvider.hpp  MathUtils.hpp  MeshNodeData.hpp  PhysicsDebugDrawer.hpp  Progress.hpp  RenderManager.hpp  WS2.hpp  WS2Editor.hpp  WS2EditorInstance.hpp  glplatform.hpp
ws2editor/lang/: lang_en_US.ts
ws2editor/launcher/: main.cpp
ws2editor/resources/Raw/: Info.plist  README.md  Tooltip.xcf  ws2editor.icns
ws2editor/resources/Workshop2/: Workshop2Resources.qrc
ws2editor/resources/raw/: defaultgrid.xcf  tooltip2.xcf  ws2editor.desktop
ws2editor/resources/ws2editor/: resources.qrc
ws2editor/src/: Config.cpp  GLManager.cpp  MathUtils.cpp  PhysicsDebugDrawer.cpp  Progress.cpp  WS2.cpp  main.cpp
ws2editor/src/exception/: Exception.cpp  IOException.cpp  ModelLoadingException.cpp  RuntimeException.cpp
ws2editor/src/model/: MeshSegment.cpp
ws2editor/src/physics/: PhysicsManager.cpp
ws2editor/src/project/: Project.cpp  ProjectManager.cpp
ws2editor/src/resource/: AbstractResource.cpp  ResourceManager.cpp  ResourceMesh.cpp  ResourceScene.cpp  ResourceTexture.cpp
ws2editor/src/scene/: EditorMeshSceneNode.cpp  MeshSceneNode.cpp  SceneSelectionManager.cpp
ws2editor/src/task/: ImportFileTask.cpp  TaskManager.cpp
ws2editor/src/ui/: AboutWindow.cpp  AboutWindow.ui  ModelManager.cpp  ModelOutliner.cpp  ModelResources.cpp  SettingsDialog.cpp  StageEditorWindow.cpp  StageEditorWindow.ui
ws2editor/src/widget/: OutlinerWidget.cpp  ViewportWidget.cpp
ws2editor/src/ws2editor/: CachedGlMesh.cpp  CachedGlTexture.cpp  Config.cpp  GLManager.cpp  IExportProvider.cpp  MathUtils.cpp  MeshNodeData.cpp  PhysicsDebugDrawer.cpp  Progress.cpp  RenderManager.cpp  WS2.cpp  WS2Editor.cpp  WS2EditorInstance.cpp  main.cpp
ws2editorplugins/gizmosplugin/: CMakeLists.txt
ws2editorplugins/lzexportproviderplugin/: CMakeLists.txt  README.md
ws2editorplugins/propertiesproviderplugin/: CMakeLists.txt  README.md
ws2editorplugins/ws2editorexampleplugin/: CMakeLists.txt
ws2lz/: CMakeLists.txt
ws2lz/include/: GameVersion.hpp
ws2lz/include/ws2lz/: LZCompressor.hpp  LZSSDictionary.hpp  SMB1LzExporter.hpp  SMB2LzExporter.hpp  TriangleIntersectionGrid.hpp  WS2Lz.hpp
ws2lz/src/ws2lz/: LZCompressor.cpp  LZSSDictionary.cpp  SMB1LzExporter.cpp  SMB2LzExporter.cpp  TriangleIntersectionGrid.cpp  WS2Lz.cpp
ws2lzfrontend/: CMakeLists.txt
ws2lzfrontend/lang/: lang_en_US.ts
ws2lzfrontend/src/: main.cpp
ws2lzfrontend/src/ws2lzfrontend/: main.cpp
(+299 files in other folders)
